--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,11 @@
       <div class="container">
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-        <h5>Part of the <a href="https://www.ninpwn.com" target="_blank">Ninpwn</a> Network</h5>
       </div>
     </header>
 
     <div class="container">
-      <a href="{{site.url}}"><img src="{{site.url}}/assets/images/shinris3n_banner_transparent.png" width="25%" height="25%" alt="shinris3n" title="shinris3n home page link"></a>
+      <a href="{{site.url}}"><img src="{{site.url}}/assets/images/shinris3n_banner_transparent.png" width="25%" height="25%" alt="gal1leo" title="gal1leo home page link"></a>
       <section id="main_content">
         {{ content }}
       </section>
