--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="container">
-      <a href="{{site.url}}"><img src="{{site.url}}/assets/images/shinris3n_banner_transparent.png" width="25%" height="25%" alt="gal1leo" title="gal1leo home page link"></a>
+      <a href="{{site.url}}"><img src="{{site.url}}/assets/images/gal1leo.gif" width="25%" height="25%" alt="gal1leo" title="gal1leo home page link"></a>
       <section id="main_content">
         {{ content }}
       </section>
