--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,23 @@
       </section>
     </div>
   </div>
-
+	<div>
+	    <img align="left" src="{{ site.baseurl }}assets/gal1leo.gif">
+	    <div align="middle">
+	        <h1>Posts</h1>
+	        {% for post in site.posts limit:5 %}
+	            <article>
+	                <h4>
+	                <a href="{{ post.url }}">{{ post.title }}</a>
+	                <span>
+	                <time datetime="{{ post.date | date: "%Y-%m-%d" }}">({{ post.date | date_to_long_string }})</time>
+	                </span>
+	                </h4>
+	                <br><br><br>
+	            </article>
+	        {% endfor %}
+	    </div>
+	</div>
   {% if paginator.total_pages > 1 %}
   <div class="pagination">
     {% if paginator.previous_page == 1 %}
