--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -11,6 +11,11 @@ $header: $conifer !default;
 $blockquote-color: $silver-chalice !default;
 $blockquote-border: $dove-grey !default;
 
+@font-face {
+  font-family: "8Bit";
+  src: url("../assets/fonts/Pixeboy.tff");
+}
+
 body {
   margin: 0;
   padding: 0;
