--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,7 +12,7 @@ $blockquote-color: $silver-chalice !default;
 $blockquote-border: $dove-grey !default;
 
 @font-face {
-  font-family: "8Bit";
+  font-family: 8Bit;
   src: url("../assets/fonts/Pixeboy.tff");
 }
 
