--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -13,7 +13,7 @@ $blockquote-border: $dove-grey !default;
 
 @font-face {
   font-family: 8Bit;
-  src: url("../assets/fonts/Pixeboy.tff");
+  src: url("../assets/Pixeboy.tff");
 }
 
 body {
