--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,10 +12,13 @@ $blockquote-color: $silver-chalice !default;
 $blockquote-border: $dove-grey !default;
 
 @font-face {
-  font-family: 8Bit;
+  font-family: "8Bit";
   src: url("../assets/Pixeboy.tff");
 }
-
+#8bit
+{
+  font-family:  "8Bit";
+}
 body {
   margin: 0;
   padding: 0;
