--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -17,7 +17,7 @@ $blockquote-border: $dove-grey !default;
 }
 #8bit
 {
-  font-family:  "8Bit";
+  font-family:  "8Bit" !important;
 }
 body {
   margin: 0;
