--- a/css/main.scss
+++ b/css/main.scss
@@ -8,3 +8,8 @@
 	font-family: "ohgodno";
 	src: url("https://gal1leo.tk/assets/Pixeboy.ttf");
 }
+
+.header-link:hover{
+	color: red;
+	background-color: aqua;
+}
