--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,9 @@
 	src: url("https://gal1leo.tk/assets/Pixeboy.ttf");
 }
 
+.header-link{
+	padding: 1%;
+}
 .header-link:hover{
 	color: black;
 	background-color: red;
