--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,4 +1,4 @@
 <a href="{{ "/writeups" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Writeups</h2></a>
 <a href="{{ "/archive" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Archive</h2></a>
 <a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./About</h2></a>
-<a href="{{ "/atom.xml" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./RSS</h2></a>
+<a href="{{ "/travels" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Travels</h2></a>
