--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,5 @@
 
     gtag('config', 'G-QK2MLYJTWX');
   </script>
+  <meta property="og:image" content="https://gal1leo.tk/assets/mickyG.jpg"/> 
 </head>
