--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,7 @@
 	object-fit: cover;
   transform: scale(1);
   transition: all 0.3s ease-in-out;
-  &:hover {
+  }
+  .img-gallery:hover {
     transform: scale(1.05);
   }
