--- a/_includes/links.html
+++ b/_includes/links.html
@@ -2,3 +2,4 @@
 <a href="{{ "/archive" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Archive</h2></a>
 <a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./About</h2></a>
 <a href="{{ "/travels" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Travels</h2></a>
+<a href="{{ "/trophies" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Trophies</h2></a>
