--- a/css/main.scss
+++ b/css/main.scss
@@ -31,9 +31,9 @@
   }
 
   .box {
-      flex-basis: 25%;
+      flex-basis: auto;
       width: 250px;
-      padding: 40px;
+      padding: 10px;
       margin: 2px;
   }
 
