--- a/css/main.scss
+++ b/css/main.scss
@@ -25,14 +25,14 @@
 .image-gallery {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
     justify-content: center;
     padding: 4px;
   }
 
   .box {
-      flex-basis: auto;
-      width: 250px;
+      flex-basis: 25%;
+      width: 100%;
       padding: 10px;
       margin: 2px;
   }
