--- a/_includes/trophies.html
+++ b/_includes/trophies.html
@@ -8,6 +8,7 @@
          <div class="box">
              <a href="{{ file.path | relative_url }}" title="{{ filename }}">
                 <img src="/assets/images/CTF-Thumbs/{{file.name }} " alt="{{ filename }}"  class="img-gallery" />
+                <h3>{{ filename }}</h3>
              </a>
         </div>
         {% endif %}
