--- a/_includes/trophies.html
+++ b/_includes/trophies.html
@@ -8,7 +8,7 @@
          <div class="box">
              <a href="{{ file.path | relative_url }}" title="{{ filename }}">
                 <img src="/assets/images/CTF-Thumbs/{{file.name }} " alt="{{ filename }}"  class="img-gallery" />
-                <h3 style="padding: auto">{{ filename }}</h3>
+                <h3 style="text-align: center;">{{ filename }}</h3>
              </a>
         </div>
         {% endif %}
