--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,8 @@
 	src: url("https://gal1leo.tk/assets/Pixeboy.ttf");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap');
+
 // #8bit{
 // 	font-family: 'ohgodno';
 // }
