--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta name="generator" content="Jekyll">
-
+  {% if page.image %}
+    <meta content="/assets/images/OG-Images/{{ page.image }}">
+  {% else %}
+    <meta content="/assets/images/OG-Images/taco.png">
+  {% endif %}
   <title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}">
