--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 @font-face {
 	font-family: "ohgodno";
-	src: url("https://gal1leo.tk/assets/Pixeboy.ttf");
+	src: url("https://gal1leo.wtf/assets/Pixeboy.ttf");
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap');
