--- a/css/main.scss
+++ b/css/main.scss
@@ -54,14 +54,13 @@
 ::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
-  opacity: 0.5;
+	background-image: url("/assets/bkg.png");
 }
 
 ::-webkit-scrollbar
 {
 	width: 10px;
-	background-color: #F5F5F5;
+	background-image: url("/assets/bkg.png");
 }
 
 ::-webkit-scrollbar-thumb
