--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@
 
 ::-webkit-scrollbar-thumb
 {
-	background-color: #0ae;
+	background-color: rgb(8, 238, 0);
 	
 	background-image: -webkit-gradient(linear, 0 0, 0 100%,
 	                   color-stop(.5, rgba(255, 255, 255, .2)),
