--- a/css/main.scss
+++ b/css/main.scss
@@ -71,3 +71,9 @@
 					   color-stop(.5, transparent), to(transparent));
 }
 
+::-webkit-scrollbar-thumb:active { 
+  body{
+    background-image: url("https://wallpaper.dog/large/20523554.jpg");
+  }
+}  
+
