--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,11 @@
 
     gtag('config', 'G-QK2MLYJTWX');
   </script>
+  <!-- display message box when right clicking -->
+  <script type="text/javascript">
+    document.addEventListener("contextmenu", function(e){
+      alert("Why you tryna right click foo?");
+      e.preventDefault();
+    }, false);
+  </script>
 </head>
