--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
     gtag('config', 'G-QK2MLYJTWX');
   </script>
   <!--
-  <!-- display message box when right clicking -->
+  <!-- display message box when right clicking
   <script type="text/javascript">
     document.addEventListener("contextmenu", function(e){
       alert("Why you tryna right click foo?");
