--- a/_includes/links.html
+++ b/_includes/links.html
@@ -3,4 +3,4 @@
 <a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./About</h2></a>
 <a href="{{ "/travels" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Travels</h2></a>
 <a href="{{ "/trophies" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./Trophies</h2></a>
-<a href="{{ "https://github.com/GGal1leo"}}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./GITHUB</h2></a>
+<a href="{{ "/secret" | prepend: site.baseurl | replace: '//', '/'}}"><h2 class="header-link" style="font-family: 'ohgodno';font-size: 150%;">./GITHUB</h2></a>
